--- a/src/about.jade
+++ b/src/about.jade
@@ -8,10 +8,10 @@ html(lang='en')
 
 		section.page-label
 			.container
-				h2 Про BONO
+				h1 ПРОЕКТ «#ProBono»
 		section.about-page
 			.container
-				h1 ПРОЕКТ «#ProBono»
+				//- h1 ПРОЕКТ «#ProBono»
 				img(src='http://justicon.ua/upload/medialibrary/3c5/probono-news.jpg', title='probono', border='0', alt='probono-news.jpg')
 				h3 КОНЦЕПЦИЯ ПРОЕКТА
 				p Проект "#Probono" обеспечивает возможность гражданам Украины получить юридическую помощь бесплатно или за минимальное вознаграждение.
@@ -20,29 +20,48 @@ html(lang='en')
 				p В проект «#ProBono» не входит другая деятельность, не связанная с непосредственным применением навыков адвокатов компании.
 				h3 УСЛОВИЯ ПРОЕКТА
 				ol
-					li Для участия в проекте необходимо подать заявку, предоставить копии документов, связанных с делом. Заявка должна быть заполнена от руки и подписанная заявителем с указанием даты и электронной почты.
-					li Прием заявок осуществляется исключительно по почте, через службы доставки или по электронной почте.
-					li Заявитель является ответственным лицом за достоверность поданной информации в заявке и прилагающих документах.
-					li В течение 10 дней со дня получения все заявки рассматриваются и оцениваются компанией.
-					li Компания не уточняет причины недопущения заявки к проекту.
-					li В случае если один заявитель направил более, чем 1 заявку, компания рассматривает все заявки с момента их получения.
-					li В случае если один заявитель подал более, чем 1 заявку по одному вопросу, компания оценивает и допускает к проекту последнюю по дате получения заявку. 
-					li Заявителю предоставляется право подавать заявки на участие в проекте «#ProBono» неограниченное количество.
-					li Компания гарантирует сохранение конфиденциальности данных о заявителе и информации о судебных делах.
-					li При рассмотрении заявок компания оставляет право за собой осуществлять проверку изложенных обстоятельств.
-					li Компания гарантирует отсутствие привилегий или ограничений к лицам по признакам расы, цвета кожи, политических, религиозных или других убеждений, пола, социального происхождения, по языковым или другим признакам.
-					li Компания не несет ответственность за заявки, что по независимым от компании причинам не были доставлены почтой или службой доставки.
-					li После рассмотрения заявки, компания принимает решение о допуске заявки к проекту и закрепляет за делом адвоката/юриста компании 
-						b «ЮСТИКОН».
-					li Компания оставляет за собой право не уточнять причины замены адвоката/юриста.
-					li Компания сообщает заявителю о результате рассмотрения каждой заявки по электронной почте.
-					li Адвокаты/юристы проекта «#ProBono» ведут переговоры по заявке только с заявителем или представителем от имени заявителя.
-					li Заявка без указания местожительства, электронной почты, не подписанная автором признается анонимной и рассмотрению не подлежит.
+					li
+						span Для участия в проекте необходимо подать заявку, предоставить копии документов, связанных с делом. Заявка должна быть заполнена от руки и подписанная заявителем с указанием даты и электронной почты.
+					li
+						span Прием заявок осуществляется исключительно по почте, через службы доставки или по электронной почте.
+					li
+						span Заявитель является ответственным лицом за достоверность поданной информации в заявке и прилагающих документах.
+					li
+						span В течение 10 дней со дня получения все заявки рассматриваются и оцениваются компанией.
+					li
+						span Компания не уточняет причины недопущения заявки к проекту.
+					li
+						span В случае если один заявитель направил более, чем 1 заявку, компания рассматривает все заявки с момента их получения.
+					li
+						span В случае если один заявитель подал более, чем 1 заявку по одному вопросу, компания оценивает и допускает к проекту последнюю по дате получения заявку. 
+					li
+						span Заявителю предоставляется право подавать заявки на участие в проекте «#ProBono» неограниченное количество.
+					li
+						span Компания гарантирует сохранение конфиденциальности данных о заявителе и информации о судебных делах.
+					li
+						span При рассмотрении заявок компания оставляет право за собой осуществлять проверку изложенных обстоятельств.
+					li
+						span Компания гарантирует отсутствие привилегий или ограничений к лицам по признакам расы, цвета кожи, политических, религиозных или других убеждений, пола, социального происхождения, по языковым или другим признакам.
+					li
+						span Компания не несет ответственность за заявки, что по независимым от компании причинам не были доставлены почтой или службой доставки.
+					li
+						span После рассмотрения заявки, компания принимает решение о допуске заявки к проекту и закрепляет за делом адвоката/юриста компании 
+							b «ЮСТИКОН».
+					li
+						span Компания оставляет за собой право не уточнять причины замены адвоката/юриста.
+					li
+						span Компания сообщает заявителю о результате рассмотрения каждой заявки по электронной почте.
+					li
+						span Адвокаты/юристы проекта «#ProBono» ведут переговоры по заявке только с заявителем или представителем от имени заявителя.
+					li
+						span Заявка без указания местожительства, электронной почты, не подписанная автором признается анонимной и рассмотрению не подлежит.
 				h3 КТО ИМЕЕТ ПРАВО ПОДАТЬ ЗАЯВКУ?
 				h4 Подать заявку на участие в проекте «#ProBono» имеют право:
 				ol
-					li Физические лица, достигшие совершеннолетие. 
-					li Юридические лица. 
+					li
+						span Физические лица, достигшие совершеннолетие. 
+					li
+						span Юридические лица. 
 				b От заявителя требуется:
 				ul
 					li(style='text-align: justify;') жалоба, что относиться к одной из практик, допущенных к проекту «#ProBono»;
