--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -539,21 +539,22 @@ body > .menu
 		font-size: 0
 		letter-spacing: 0
 		.category
-			display: inline-block
+			display: block
 			vertical-align: top
 			padding: 6px 20px
 			// position: relative
+			cursor: pointer
 			width: 33.3%
 			width: 100%
+			width: 50%
 			h3
-				font-size: 24px
+				font-size: 22px
 				font-weight: bold
 				line-height: 1.2em
 				// margin-bottom: 0.5em
 				position: relative
-				width: 50%
 				border-bottom: 1px solid #888
-				padding-bottom: 14px
+				padding: 0 0 14px 52px
 				&:after
 					opacity: 0
 					position: absolute
@@ -564,6 +565,11 @@ body > .menu
 					font-size: inherit
 					font-weight: inherit
 					line-height: inherit
+			img
+				position: absolute
+				left: 0
+				max-height: 40px
+				width: 36px
 			&:last-child
 				h3
 					border: none
@@ -573,6 +579,8 @@ body > .menu
 				left: 50%
 				top: 60px
 				padding-left: 60px
+				animation: submenuShow .4s
+				min-height: 100vh
 				a
 					display: block
 					font-size: 18px
@@ -581,6 +589,159 @@ body > .menu
 						text-decoration: underline
 			&:hover
 				h3
+					&:after
+						opacity: 1
+				.sub-categories
+					display: block
+
+.categories-click
+	// display: none
+	overflow: hidden
+	position: relative
+	padding: 60px 0
+	@media (max-width: $tablet)
+		display: none
+	&:before
+		content: ''
+		display: block
+		background: url('../img/bg/service-background-1.jpg') 50% 50% no-repeat
+		background-size: cover
+		position: absolute
+		opacity: 0.5
+		left: 0
+		top: 0
+		right: 0
+		bottom: 0
+		z-index: -1
+	.categories-holder
+		font-size: 0
+		letter-spacing: 0
+		.category
+			display: inline-block
+			vertical-align: top
+			margin: 16px 0.14%
+			// position: relative
+			cursor: pointer
+			width: 33%
+			h3
+				font-size: 22px
+				font-weight: bold
+				line-height: 1.2em
+				// margin-bottom: 0.5em
+				position: relative
+				padding: 0 0 14px 66px
+				&:after
+					opacity: 0
+					position: absolute
+					content: '>'
+					top: 2px
+					right: -14px
+				a
+					font-size: inherit
+					font-weight: inherit
+					line-height: inherit
+					color: inherit
+			img
+				position: absolute
+				left: 0
+				// max-height: 40px
+				width: 50px
+			.sub-categories
+				display: none
+				// padding-left: 60px
+				position: absolute
+				left: 0
+				right: 0
+				top: 0
+				bottom: 0
+				animation: zoomShow .4s
+				background: rgba(255,255,255,0.9)
+				z-index: 1
+				a
+					display: block
+					font-size: 18px
+					margin: 0 10px 10px
+					&:hover
+						text-decoration: underline
+				.content-holder
+					position: absolute
+					left: 50%
+					top: 50%
+					transform: translate(-50%, -50%)
+			&.active
+				h3
+					color: $main-color
+					text-decoration: underline
+					&:after
+						opacity: 1
+				.sub-categories
+					display: block
+
+.categories-jump
+	// display: none
+	position: relative
+	padding: 60px 0
+	@media (max-width: $tablet)
+		display: none
+	&:before
+		content: ''
+		display: block
+		background: #ddd 50% 50% no-repeat
+		background-size: cover
+		position: absolute
+		opacity: 0.5
+		left: 0
+		top: 0
+		right: 0
+		bottom: 0
+		z-index: -1
+	.categories-holder
+		font-size: 0
+		letter-spacing: 0
+		.category
+			display: inline-block
+			vertical-align: top
+			padding: 16px 20px
+			// position: relative
+			cursor: pointer
+			width: 33.3%
+			h3
+				font-size: 22px
+				font-weight: bold
+				line-height: 1.2em
+				// margin-bottom: 0.5em
+				position: relative
+				padding: 0 0 14px 66px
+				&:after
+					opacity: 0
+					position: absolute
+					content: '>'
+					top: 2px
+					right: -6px
+				a
+					font-size: inherit
+					font-weight: inherit
+					line-height: inherit
+					color: inherit
+			img
+				position: absolute
+				left: 0
+				// max-height: 40px
+				width: 50px
+			.sub-categories
+				display: none
+				padding-left: 60px
+				animation: submenuShow .4s
+				a
+					display: block
+					font-size: 18px
+					margin: 0 10px 10px
+					&:hover
+						text-decoration: underline
+			&:hover
+				h3
+					color: $main-color
+					text-decoration: underline
 					&:after
 						opacity: 1
 				.sub-categories
@@ -2575,6 +2736,28 @@ body > .menu
 				height: 12px
 				width: 12px
 
+	.btn
+		background: #f54f29
+		border-radius: 3px
+		color: white
+		display: inline-block
+		font-size: 12px
+		font-weight: 400
+		min-width: 160px
+		text-align: center
+		text-transform: uppercase
+		margin: 20px 8px 20px 0
+		padding: 12px 24px
+
+	.algorythm-table
+		border-collapse: collapse
+		width: 99%
+		td
+			border: 1px solid $main-color
+			box-sizing: border-box
+			vertical-align: top
+			padding: 10px
+
 .full-article
 	h1, h2
 		color: #36393d
@@ -2614,10 +2797,13 @@ body > .menu
 			padding-top: 0
 
 .about-page
+	margin-top: 60px
 	img
 		float: left
 		margin: 6px 60px 20px 0
 		max-width: 50%
+	hr
+		margin: 60px 0
 	h1
 		color: $main-color
 		font-size: 32px
@@ -2647,7 +2833,6 @@ body > .menu
 		margin-bottom: 30px
 		li
 			list-style: none
-			padding-left: 28px
 			position: relative
 			margin: 0 0 6px
 			color: #666
@@ -2657,13 +2842,17 @@ body > .menu
 			&:before
 				counter-increment: aboutPageList
 				content: counter(aboutPageList) ". "
-				position: absolute
-				left: 0
-				top: 0
-				width: 28px
+				display: inline-block
+				float: left
+				margin-right: 10px
+				min-width: 20px
+			span
+				display: block
+				overflow: hidden
 	table
 		border-collapse: collapse
 		// border: 1px solid $main-color
+		width: 100%
 		thead
 			text-align: center
 			font-size: 26px
