--- a/src/search.jade
+++ b/src/search.jade
@@ -6,170 +6,146 @@ html(lang='en')
 	body
 		include ./partials/navigation.jade
 
-		.container
-			.wrap
-				//- .bc
-					div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-						a(itemprop='url', href='/', title='Главная')
-							span(itemprop='title') Главная
-					div  » 
-					div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-						span(itemprop='title') Поиск
-				.tophr
-				.main.wide-l
-					h1#page-tit Поиск
-					.main-container
-						.search-page
-							form(action='', method='get')
-								input(type='hidden', name='tags', value='')
-								input(type='hidden', name='how', value='r')
-								table(width='100%', border='0', cellpadding='0', cellspacing='0')
-									tbody
-										tr
-											td(style='width: 100%;')
-												input.search-query(type='text', name='q')
-												input.search-button(type='submit', value='')
-								noindex
-									.search-advanced
-										.search-advanced-result
-											.search-result Найдено: 288
-							.search-result
-								.search-item
-									h4
-										a(href='/uslugi/migr/immigr/grazhd-ukr/grazhdanstvo-ukrainy-putem-prinyatiya-v-grazhdanstvo.html?sphrase_id=13027') Гражданство Украины путем принятия в гражданство
-									.search-preview
-										| ... возможность приобрести гражданство путем принятия в гражданство Украины!
-										| Принятие в гражданство подразумевает непрерывное проживание на 
-										b законных
-										|  основаниях на территории Украины на протяжении последних пяти лет, признание и соблюдение Конституции Украины и 
-										b законов
-										|  Украины,...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/ua/uslugi/migr/immigr/grazhd-ukr/grazhdanstvo-ukrainy-putem-prinyatiya-v-grazhdanstvo.html?sphrase_id=13027') Громадянство України шляхом прийняття до громадянства
-									.search-preview
-										| ... можливість отримати громадянство шляхом прийняття в громадянство України!
-										| Прийняття в громадянство має на увазі безперервне проживання на 
-										b законних
-										|  підставах на території України протягом останніх п'яти років, визнання й дотримання Конституції України й 
-										b закон
-										| ів України, володіння ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/uslugi/lits/razresheniya/karantinnoe-razreshenie-na-import.html?sphrase_id=13027') Карантинное разрешение на импорт
-									.search-preview
-										| ... фитосанитарных мер. 
-										| Оформление карантинного разрешения, регулируется 
-										| ЗУ «О карантине растений», ЗУ «О внесении изменений в некоторые 
-										b Законы
-										|  Украины по оптимизации выдачи документов разрешительного характера в сфере хозяйственной деятельности», Постановлением КМУ «О ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/ua/uslugi/lits/razresheniya/karantinnoe-razreshenie-na-import.html?sphrase_id=13027') Карантинний дозвіл на імпорт
-									.search-preview
-										| ... фітосанітарних заходів. 
-										| Оформлення карантинного дозволу, регулюється 
-										| ЗУ «Про карантин рослин», ЗУ «Про внесення змін до деяких 
-										b Закон
-										| ів України з оптимізації видачі документів дозвільного характеру у сфері господарської діяльності», Постановою КМУ «Про деякі ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/uslugi/korp/registratsiya/drug-vid/registratsiya-inostrannykh-investitsiy.html?sphrase_id=13027') Регистрация иностранных инвестиций
-									.search-preview
-										| ... при этом Вы хотите обезопасить свои вложения и при необходимости не иметь преград для их вывода за границу? И, кроме того, Вы сможете вполне 
-										b законно
-										|  получить вид на постоянное проживание в Украине!
-										| !
-										| ОПТИМАЛЬНОЕ РЕШЕНИЕ
-										| Единственно верное решение – официально зарегистрировать ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/uslugi/korp/registratsiya/obedin-predpr/obshchestvennoe-obedinenie-obshchestvennaya-organizatsiya-obshchestvennyy-soyuz.html?sphrase_id=13027') Общественное объединение (общественная организация, общественный союз)
-									.search-preview
-										| ... клиенты
-										| Обращайтесь и мы качественно и в кратчайший срок зарегистрируем для Вас общественное объединение! 
-										| C 1 января 2013 года вступил в силу 
-										b Закон
-										|  Украины «Об общественных объединениях»
-										| , который внес существенные изменения в порядок регистрации и функционирования общественных ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/ua/uslugi/korp/registratsiya/obedin-predpr/obshchestvennoe-obedinenie-obshchestvennaya-organizatsiya-obshchestvennyy-soyuz.html?sphrase_id=13027') Громадське об’єднання (громадська спілка, громадський союз)
-									.search-preview
-										| ... наші 
-										| клієнти
-										| Звертайтеся, і ми якісно і в найкоротший строк зареєструємо для Вас громадське об'єднання!
-										| C 1 січня 2013 року набув чинності 
-										b Закон
-										|  України «Про громадські об'єднання»
-										| , який вніс істотні зміни в порядок реєстрації і функціонування громадських об'єднань.
-										| У ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/ua/uslugi/korp/registratsiya/drug-vid/registratsiya-inostrannykh-investitsiy.html?sphrase_id=13027') Реєстрація іноземних інвестицій
-									.search-preview
-										| ... при цьому Ви хочете захистити свої вклади і при необхідності не мати перешкод для їх виведення за кордон? І, крім того, Ви зможете цілком 
-										b законно
-										|  отримати вид на постійне проживання в Україні!
-										| !
-										| ОПТИМАЛЬНЕ РІШЕННЯ
-										| Єдине вірне рішення - офіційно зареєструвати свої вклади як ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/uslugi/korp/registratsiya/obedin-predpr/korporatsiya.html?sphrase_id=13027') Корпорация
-									.search-preview
-										| ... Корпорацию необходимо получить разрешение от Антимонопольного комитета Украины (на согласованные действия или на концентрацию) что следует из 
-										b Закона
-										|  Украины «О защите экономической конкуренции». 
-										| Далее, Корпорация регистрируется в соответствии с 
-										b Законом
-										|  Украины «О государственной ...
-									.search-item-meta
-								.search-item
-									h4
-										a(href='/uslugi/konsalting/antimonopolnoe-pravo/obzhalovanie-resheniy-i-deystviy-organov-antimonopolnogo-komiteta.html?sphrase_id=13027') Обжалование решений и действий органов антимонопольного комитета
-									.search-preview
-										| ... законодательству Украины и могут нарушать права и интересы субъектов хозяйственной деятельности. Возможность и порядок обжалования предусмотрен 
-										b Законом
-										|  Украины "О защите экономической конкуренции". 
-										| В соответствии ст. 57 
-										b Закона
-										|  Украины "О защите экономической конкуренции" ...
-									.search-item-meta
-								// add class search-info
-								font.text
-									| Результаты поиска 
-									| 1 - 10 из 288
-									br
-								// add classes for pages and each navigation elements
-								font.text
-									| Начало | Пред. |
-									b 1
-									a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=2') 2
-									a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=3') 3
-									a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=4') 4
-									a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=5') 5
-									| 						|
-									a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=2') След.
-									|  |
-									a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=29') Конец
-								.search-sorting
-									label Отсортировано:
-									b по релевантности
-									a(href='/search/?q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&where=&tags=&how=d') по дате
-				.clear
-			.pd10.hg1
+		section.page-label
+			.container
+				h2 Поиск
+		section.search-result-section
 
-		// add block
-		.wrap
+			.container
+				.search-result
+					.search-item
+						h4
+							a(href='/uslugi/migr/immigr/grazhd-ukr/grazhdanstvo-ukrainy-putem-prinyatiya-v-grazhdanstvo.html?sphrase_id=13027') Гражданство Украины путем принятия в гражданство
+						.search-preview
+							| ... возможность приобрести гражданство путем принятия в гражданство Украины!
+							| Принятие в гражданство подразумевает непрерывное проживание на 
+							b законных
+							|  основаниях на территории Украины на протяжении последних пяти лет, признание и соблюдение Конституции Украины и 
+							b законов
+							|  Украины,...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/ua/uslugi/migr/immigr/grazhd-ukr/grazhdanstvo-ukrainy-putem-prinyatiya-v-grazhdanstvo.html?sphrase_id=13027') Громадянство України шляхом прийняття до громадянства
+						.search-preview
+							| ... можливість отримати громадянство шляхом прийняття в громадянство України!
+							| Прийняття в громадянство має на увазі безперервне проживання на 
+							b законних
+							|  підставах на території України протягом останніх п'яти років, визнання й дотримання Конституції України й 
+							b закон
+							| ів України, володіння ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/uslugi/lits/razresheniya/karantinnoe-razreshenie-na-import.html?sphrase_id=13027') Карантинное разрешение на импорт
+						.search-preview
+							| ... фитосанитарных мер. 
+							| Оформление карантинного разрешения, регулируется 
+							| ЗУ «О карантине растений», ЗУ «О внесении изменений в некоторые 
+							b Законы
+							|  Украины по оптимизации выдачи документов разрешительного характера в сфере хозяйственной деятельности», Постановлением КМУ «О ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/ua/uslugi/lits/razresheniya/karantinnoe-razreshenie-na-import.html?sphrase_id=13027') Карантинний дозвіл на імпорт
+						.search-preview
+							| ... фітосанітарних заходів. 
+							| Оформлення карантинного дозволу, регулюється 
+							| ЗУ «Про карантин рослин», ЗУ «Про внесення змін до деяких 
+							b Закон
+							| ів України з оптимізації видачі документів дозвільного характеру у сфері господарської діяльності», Постановою КМУ «Про деякі ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/uslugi/korp/registratsiya/drug-vid/registratsiya-inostrannykh-investitsiy.html?sphrase_id=13027') Регистрация иностранных инвестиций
+						.search-preview
+							| ... при этом Вы хотите обезопасить свои вложения и при необходимости не иметь преград для их вывода за границу? И, кроме того, Вы сможете вполне 
+							b законно
+							|  получить вид на постоянное проживание в Украине!
+							| !
+							| ОПТИМАЛЬНОЕ РЕШЕНИЕ
+							| Единственно верное решение – официально зарегистрировать ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/uslugi/korp/registratsiya/obedin-predpr/obshchestvennoe-obedinenie-obshchestvennaya-organizatsiya-obshchestvennyy-soyuz.html?sphrase_id=13027') Общественное объединение (общественная организация, общественный союз)
+						.search-preview
+							| ... клиенты
+							| Обращайтесь и мы качественно и в кратчайший срок зарегистрируем для Вас общественное объединение! 
+							| C 1 января 2013 года вступил в силу 
+							b Закон
+							|  Украины «Об общественных объединениях»
+							| , который внес существенные изменения в порядок регистрации и функционирования общественных ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/ua/uslugi/korp/registratsiya/obedin-predpr/obshchestvennoe-obedinenie-obshchestvennaya-organizatsiya-obshchestvennyy-soyuz.html?sphrase_id=13027') Громадське об’єднання (громадська спілка, громадський союз)
+						.search-preview
+							| ... наші 
+							| клієнти
+							| Звертайтеся, і ми якісно і в найкоротший строк зареєструємо для Вас громадське об'єднання!
+							| C 1 січня 2013 року набув чинності 
+							b Закон
+							|  України «Про громадські об'єднання»
+							| , який вніс істотні зміни в порядок реєстрації і функціонування громадських об'єднань.
+							| У ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/ua/uslugi/korp/registratsiya/drug-vid/registratsiya-inostrannykh-investitsiy.html?sphrase_id=13027') Реєстрація іноземних інвестицій
+						.search-preview
+							| ... при цьому Ви хочете захистити свої вклади і при необхідності не мати перешкод для їх виведення за кордон? І, крім того, Ви зможете цілком 
+							b законно
+							|  отримати вид на постійне проживання в Україні!
+							| !
+							| ОПТИМАЛЬНЕ РІШЕННЯ
+							| Єдине вірне рішення - офіційно зареєструвати свої вклади як ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/uslugi/korp/registratsiya/obedin-predpr/korporatsiya.html?sphrase_id=13027') Корпорация
+						.search-preview
+							| ... Корпорацию необходимо получить разрешение от Антимонопольного комитета Украины (на согласованные действия или на концентрацию) что следует из 
+							b Закона
+							|  Украины «О защите экономической конкуренции». 
+							| Далее, Корпорация регистрируется в соответствии с 
+							b Законом
+							|  Украины «О государственной ...
+						.search-item-meta
+					.search-item
+						h4
+							a(href='/uslugi/konsalting/antimonopolnoe-pravo/obzhalovanie-resheniy-i-deystviy-organov-antimonopolnogo-komiteta.html?sphrase_id=13027') Обжалование решений и действий органов антимонопольного комитета
+						.search-preview
+							| ... законодательству Украины и могут нарушать права и интересы субъектов хозяйственной деятельности. Возможность и порядок обжалования предусмотрен 
+							b Законом
+							|  Украины "О защите экономической конкуренции". 
+							| В соответствии ст. 57 
+							b Закона
+							|  Украины "О защите экономической конкуренции" ...
+						.search-item-meta
+					// add class search-info
+					font.text
+						| Результаты поиска 
+						| 1 - 10 из 288
+						br
+					// add classes for pages and each navigation elements
+					font.text
+						| Начало | Пред. |
+						b 1
+						a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=2') 2
+						a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=3') 3
+						a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=4') 4
+						a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=5') 5
+						| 						|
+						a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=2') След.
+						|  |
+						a(href='/search/index.php?tags=&how=r&q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&PAGEN_1=29') Конец
+					.search-sorting
+						label Отсортировано:
+						b по релевантности
+						a(href='/search/?q=%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD&where=&tags=&how=d') по дате
+
+		.container
 			.consult-me-block
 				h2 Не нашли ответ? <br />Свяжитесь с нами и мы вас бесплатно проконсультируем.
 				a.btn(href="#") Заказать консультацию
