--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -657,10 +657,12 @@ body > .menu
 				animation: zoomShow .4s
 				background: rgba(255,255,255,0.9)
 				z-index: 1
+				text-align: center
 				a
 					display: block
 					font-size: 18px
 					margin: 0 10px 10px
+					text-align: center
 					&:hover
 						text-decoration: underline
 				.content-holder
@@ -1480,7 +1482,7 @@ body > .menu
 			repeat: no-repeat
 
 // SEARCH PAGE
-.search-page
+.search-result-section
 	@media (max-width: $tablet)
 		padding: 0 20px
 	& > form
@@ -2888,3 +2890,22 @@ body > .menu
 					left: 0
 					top: 0
 					width: 28px
+
+.algorythm-block-1
+	counter-reset: algorythmBlock
+	li
+		list-style: none
+		padding-left: 28px
+		position: relative
+		margin: 0 0 6px
+		color: #666
+		font-size: 15px
+		font-weight: 400
+		line-height: 1.5em
+		&:before
+			counter-increment: algorythmBlock
+			content: counter(algorythmBlock)
+			position: absolute
+			left: 0
+			top: 0
+			width: 28px
