--- a/src/partners.jade
+++ b/src/partners.jade
@@ -6,14 +6,12 @@ html(lang='en')
 	body
 		include ./partials/navigation.jade
 
+		section.page-label
+			.container
+				h2 Наши клиенты
 		.container
 			.wrap
-				//- .bc
-					div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-						span(itemprop='title') Главная
-				.tophr
 				.main.wide-l
-					h1#page-tit Наши клиенты
 					.main-container
 						.clients-list
 							#cl-in
