--- a/src/press.jade
+++ b/src/press.jade
@@ -7,127 +7,93 @@ html(lang='en')
 	body
 		include ./partials/navigation.jade
 
+		section.page-label
+			.container
+				h2 Пресс-центр
 		.container
-			.wrap
-				.bc.hidden
-					div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-						a(itemprop='url', href='/', title='Главная')
-							span(itemprop='title') Главная
-					div  » 
-					div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-						a(itemprop='url', href='/press-tsentr/', title='Пресс-центр')
-							span(itemprop='title') Пресс-центр
-					div  » 
-					div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-						span(itemprop='title') Новости права
-				.tophr
-				.main.wide-l
-					h1#page-tit Пресс-центр
-					.categories-tabs
-						.tabs-holder
-							.tab.active
-								span Новости права
-							.tab
-								span Мнение эксперта
-							.tab
-								span Публикации
-					.main-container
-						.news-list
-							p#bx_1373509569_1705.news-item
-								a(href='/press-tsentr/novosti-prava/utvershdeny-novyye-litsensionnyye-usloviya-stroitelnoj-deyatelnosti.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/283/111.jpg', width='200', height='128', alt='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', title='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', style='float:left')
-								a(href='/press-tsentr/novosti-prava/utvershdeny-novyye-litsensionnyye-usloviya-stroitelnoj-deyatelnosti.html')
-									b УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ
-								br
-								| 										Новыми лицензионными условиями предусмотрено упрощение процедуры подачи документов в Государственную архитектурно-строительную инспекцию, а также уменьшен перечень работ, для выполнения которых предусмотрено получение строительной лицензии, по сравнению с предыдущими лицензионными условиями. В скором времени соответствующий акт Кабинета Министров Украины будет опубликован...
-							div(style='clear:both')
-							p
-							p#bx_1373509569_1704.news-item
-								a(href='/press-tsentr/novosti-prava/novye-litsensionnye-usloviya.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/f7e/222.jpg', width='200', height='133', alt='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', title='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', style='float:left')
-								a(href='/press-tsentr/novosti-prava/novye-litsensionnye-usloviya.html')
-									b НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ
-								br
-								| 										Кабинетом министров Украины утверждено 
-								b Постановление № 285 от 2 марта 2016 года
-								| , которым предусмотрены новые лицензионные условия хозяйственной деятельности по осуществлению медицинской практики. Данным документом предусмотрены перечень документов, подаваемый соискателем лицензии, а также...
-							div(style='clear:both')
-							p
-							p#bx_1373509569_1731.news-item
-								a(href='/press-tsentr/novosti-prava/vstupil-v-silu-zakon-o-gosudarstvennoy-registratsii-prav-na-nedvizhimoe-imushchestvo-i-ikh-obremenen.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/b00/1.png', width='200', height='150', alt='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', title='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', style='float:left')
-								a(href='/press-tsentr/novosti-prava/vstupil-v-silu-zakon-o-gosudarstvennoy-registratsii-prav-na-nedvizhimoe-imushchestvo-i-ikh-obremenen.html')
-									b
-										| ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"
-								br
-								| 										09.05.2014 году вступил в силу Закон Украины от 15.04.2014 г. N 1212 - VII "О внесении изменений к статье 19 Закона Украины "О государственной регистрации вещественных прав на недвижимое имущество и их обременений" относительно особенностей государственной регистрации прав собственности на объекты недвижимого имущества, законченные строительством до 5 августа 1992 года"...
-							div(style='clear:both')
-							p
+			.main.wide-l
+				.categories-tabs
+					.tabs-holder
+						.tab.active
+							span Новости права
+						.tab
+							span Мнение эксперта
+						.tab
+							span Публикации
+				.main-container
+					.news-list
+						p#bx_1373509569_1705.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/283/111.jpg', width='200', height='128', alt='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', title='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', style='float:left')
+							a(href='article.html')
+								b УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ
 							br
-							p#bx_1373509569_1705.news-item
-								a(href='/press-tsentr/novosti-prava/utvershdeny-novyye-litsensionnyye-usloviya-stroitelnoj-deyatelnosti.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/283/111.jpg', width='200', height='128', alt='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', title='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', style='float:left')
-								a(href='/press-tsentr/novosti-prava/utvershdeny-novyye-litsensionnyye-usloviya-stroitelnoj-deyatelnosti.html')
-									b УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ
-								br
-								| 										Новыми лицензионными условиями предусмотрено упрощение процедуры подачи документов в Государственную архитектурно-строительную инспекцию, а также уменьшен перечень работ, для выполнения которых предусмотрено получение строительной лицензии, по сравнению с предыдущими лицензионными условиями. В скором времени соответствующий акт Кабинета Министров Украины будет опубликован...
-							div(style='clear:both')
-							p
-							p#bx_1373509569_1731.news-item
-								a(href='/press-tsentr/novosti-prava/vstupil-v-silu-zakon-o-gosudarstvennoy-registratsii-prav-na-nedvizhimoe-imushchestvo-i-ikh-obremenen.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/b00/1.png', width='200', height='150', alt='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', title='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', style='float:left')
-								a(href='/press-tsentr/novosti-prava/vstupil-v-silu-zakon-o-gosudarstvennoy-registratsii-prav-na-nedvizhimoe-imushchestvo-i-ikh-obremenen.html')
-									b
-										| ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"
-								br
-								| 										09.05.2014 году вступил в силу Закон Украины от 15.04.2014 г. N 1212 - VII "О внесении изменений к статье 19 Закона Украины "О государственной регистрации вещественных прав на недвижимое имущество и их обременений" относительно особенностей государственной регистрации прав собственности на объекты недвижимого имущества, законченные строительством до 5 августа 1992 года"...
-							div(style='clear:both')
-							p
+							| 										Новыми лицензионными условиями предусмотрено упрощение процедуры подачи документов в Государственную архитектурно-строительную инспекцию, а также уменьшен перечень работ, для выполнения которых предусмотрено получение строительной лицензии, по сравнению с предыдущими лицензионными условиями. В скором времени соответствующий акт Кабинета Министров Украины будет опубликован...
+						p#bx_1373509569_1704.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/f7e/222.jpg', width='200', height='133', alt='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', title='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', style='float:left')
+							a(href='article.html')
+								b НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ
 							br
-							p#bx_1373509569_1704.news-item
-								a(href='/press-tsentr/novosti-prava/novye-litsensionnye-usloviya.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/f7e/222.jpg', width='200', height='133', alt='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', title='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', style='float:left')
-								a(href='/press-tsentr/novosti-prava/novye-litsensionnye-usloviya.html')
-									b НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ
-								br
-								| 										Кабинетом министров Украины утверждено 
-								b Постановление № 285 от 2 марта 2016 года
-								| , которым предусмотрены новые лицензионные условия хозяйственной деятельности по осуществлению медицинской практики. Данным документом предусмотрены перечень документов, подаваемый соискателем лицензии, а также...
-							div(style='clear:both')
-							p
-							p#bx_1373509569_1705.news-item
-								a(href='/press-tsentr/novosti-prava/utvershdeny-novyye-litsensionnyye-usloviya-stroitelnoj-deyatelnosti.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/283/111.jpg', width='200', height='128', alt='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', title='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', style='float:left')
-								a(href='/press-tsentr/novosti-prava/utvershdeny-novyye-litsensionnyye-usloviya-stroitelnoj-deyatelnosti.html')
-									b УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ
-								br
-								| 										Новыми лицензионными условиями предусмотрено упрощение процедуры подачи документов в Государственную архитектурно-строительную инспекцию, а также уменьшен перечень работ, для выполнения которых предусмотрено получение строительной лицензии, по сравнению с предыдущими лицензионными условиями. В скором времени соответствующий акт Кабинета Министров Украины будет опубликован...
-							div(style='clear:both')
-							p
-							p#bx_1373509569_1704.news-item
-								a(href='/press-tsentr/novosti-prava/novye-litsensionnye-usloviya.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/f7e/222.jpg', width='200', height='133', alt='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', title='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', style='float:left')
-								a(href='/press-tsentr/novosti-prava/novye-litsensionnye-usloviya.html')
-									b НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ
-								br
-								| 										Кабинетом министров Украины утверждено 
-								b Постановление № 285 от 2 марта 2016 года
-								| , которым предусмотрены новые лицензионные условия хозяйственной деятельности по осуществлению медицинской практики. Данным документом предусмотрены перечень документов, подаваемый соискателем лицензии, а также...
-							div(style='clear:both')
-							p
-							p#bx_1373509569_1731.news-item
-								a(href='/press-tsentr/novosti-prava/vstupil-v-silu-zakon-o-gosudarstvennoy-registratsii-prav-na-nedvizhimoe-imushchestvo-i-ikh-obremenen.html')
-									img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/b00/1.png', width='200', height='150', alt='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', title='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', style='float:left')
-								a(href='/press-tsentr/novosti-prava/vstupil-v-silu-zakon-o-gosudarstvennoy-registratsii-prav-na-nedvizhimoe-imushchestvo-i-ikh-obremenen.html')
-									b
-										| ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"
-								br
-								| 										09.05.2014 году вступил в силу Закон Украины от 15.04.2014 г. N 1212 - VII "О внесении изменений к статье 19 Закона Украины "О государственной регистрации вещественных прав на недвижимое имущество и их обременений" относительно особенностей государственной регистрации прав собственности на объекты недвижимого имущества, законченные строительством до 5 августа 1992 года"...
-							div(style='clear:both')
-							p
+							| 										Кабинетом министров Украины утверждено 
+							b Постановление № 285 от 2 марта 2016 года
+							| , которым предусмотрены новые лицензионные условия хозяйственной деятельности по осуществлению медицинской практики. Данным документом предусмотрены перечень документов, подаваемый соискателем лицензии, а также...
+						p#bx_1373509569_1731.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/b00/1.png', width='200', height='150', alt='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', title='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', style='float:left')
+							a(href='article.html')
+								b
+									| ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"
 							br
-				.clear
-			.pd10.hg1
+							| 										09.05.2014 году вступил в силу Закон Украины от 15.04.2014 г. N 1212 - VII "О внесении изменений к статье 19 Закона Украины "О государственной регистрации вещественных прав на недвижимое имущество и их обременений" относительно особенностей государственной регистрации прав собственности на объекты недвижимого имущества, законченные строительством до 5 августа 1992 года"...
+						p#bx_1373509569_1705.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/283/111.jpg', width='200', height='128', alt='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', title='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', style='float:left')
+							a(href='article.html')
+								b УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ
+							br
+							| 										Новыми лицензионными условиями предусмотрено упрощение процедуры подачи документов в Государственную архитектурно-строительную инспекцию, а также уменьшен перечень работ, для выполнения которых предусмотрено получение строительной лицензии, по сравнению с предыдущими лицензионными условиями. В скором времени соответствующий акт Кабинета Министров Украины будет опубликован...
+						p#bx_1373509569_1731.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/b00/1.png', width='200', height='150', alt='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', title='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', style='float:left')
+							a(href='article.html')
+								b
+									| ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"
+							br
+							| 										09.05.2014 году вступил в силу Закон Украины от 15.04.2014 г. N 1212 - VII "О внесении изменений к статье 19 Закона Украины "О государственной регистрации вещественных прав на недвижимое имущество и их обременений" относительно особенностей государственной регистрации прав собственности на объекты недвижимого имущества, законченные строительством до 5 августа 1992 года"...
+						p#bx_1373509569_1704.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/f7e/222.jpg', width='200', height='133', alt='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', title='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', style='float:left')
+							a(href='article.html')
+								b НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ
+							br
+							| 										Кабинетом министров Украины утверждено 
+							b Постановление № 285 от 2 марта 2016 года
+							| , которым предусмотрены новые лицензионные условия хозяйственной деятельности по осуществлению медицинской практики. Данным документом предусмотрены перечень документов, подаваемый соискателем лицензии, а также...
+						p#bx_1373509569_1705.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/283/111.jpg', width='200', height='128', alt='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', title='УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ', style='float:left')
+							a(href='article.html')
+								b УТВЕРЖДЕНЫ НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ СТРОИТЕЛЬНОЙ ДЕЯТЕЛЬНОСТИ
+							br
+							| 										Новыми лицензионными условиями предусмотрено упрощение процедуры подачи документов в Государственную архитектурно-строительную инспекцию, а также уменьшен перечень работ, для выполнения которых предусмотрено получение строительной лицензии, по сравнению с предыдущими лицензионными условиями. В скором времени соответствующий акт Кабинета Министров Украины будет опубликован...
+						p#bx_1373509569_1704.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/f7e/222.jpg', width='200', height='133', alt='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', title='НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ', style='float:left')
+							a(href='article.html')
+								b НОВЫЕ ЛИЦЕНЗИОННЫЕ УСЛОВИЯ МЕДИЦИНСКОЙ ПРАКТИКИ
+							br
+							| 										Кабинетом министров Украины утверждено 
+							b Постановление № 285 от 2 марта 2016 года
+							| , которым предусмотрены новые лицензионные условия хозяйственной деятельности по осуществлению медицинской практики. Данным документом предусмотрены перечень документов, подаваемый соискателем лицензии, а также...
+						p#bx_1373509569_1731.news-item
+							a(href='article.html')
+								img.preview_picture(border='0', src='http://justicon.ua/upload/iblock/b00/1.png', width='200', height='150', alt='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', title='ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"', style='float:left')
+							a(href='article.html')
+								b
+									| ВСТУПИЛ В СИЛУ ЗАКОН "О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ ВЕЩЕСТВЕННЫХ ПРАВ НА НЕДВИЖИМОЕ ИМУЩЕСТВО И ИХ ОБРЕМЕНЕНИЙ"
+							br
+							| 										09.05.2014 году вступил в силу Закон Украины от 15.04.2014 г. N 1212 - VII "О внесении изменений к статье 19 Закона Украины "О государственной регистрации вещественных прав на недвижимое имущество и их обременений" относительно особенностей государственной регистрации прав собственности на объекты недвижимого имущества, законченные строительством до 5 августа 1992 года"...
 
 
 		include ./partials/footer.jade
