--- a/src/more.jade
+++ b/src/more.jade
@@ -260,52 +260,34 @@ html(lang='en')
 											ul
 												li непосредственное участие в ходе проведения исполнительных действий 
 										td(align='center', colspan='1') 1 р.д.
-						.table-holder
-							.algorythm-block-1
-								ul
-									li
-										.step-col
-											.name Анализ документов и подготовка заявления
-											.time от 1 р.д.
-										.description-col
-											ul
-												li
-													| анализ исполнительного производства (в случае его наличия) 
-												li
-													| подготовка заявления об открытии исполнительного производства
-									li
-										.step-col
-											.name Сопровождение исполнительного производства
-											.time от 1 р.д.
-										.description-col
-											ul
-												li
-													| контроль действий исполнителя 
-												li
-													| подготовка необходимых документов (заявлений, ходатайств, жалоб…)
-									li
-										.step-col
-											.name Сопровождение исполнительного производства
-											.time от 1 р.д.
-										.description-col
-											ul
-												li
-													| контроль действий исполнителя 
-												li
-													| подготовка необходимых документов (заявлений, ходатайств, жалоб…)
-									tr
-										td(colspan='1')
-											b
-												span(style='color: rgb(0, 84, 165);')
-													span(style='color: rgb(255, 0, 0);') 3.
-												b
-													font(color='#0054a5')
-														| Участие исполнительных действиях 
-														br
-										td(colspan='1')
-											ul
-												li непосредственное участие в ходе проведения исполнительных действий 
-										td(align='center', colspan='1') 1 р.д.
+						ul.algorythm-block-1
+							li
+								.step-col
+									.name Анализ документов и подготовка заявления
+									.time от 1 р.д.
+								.description-col
+									ul
+										li
+											| анализ исполнительного производства (в случае его наличия) 
+										li
+											| подготовка заявления об открытии исполнительного производства
+							li
+								.step-col
+									.name Сопровождение исполнительного производства
+									.time от 1 р.д.
+								.description-col
+									ul
+										li
+											| контроль действий исполнителя 
+										li
+											| подготовка необходимых документов (заявлений, ходатайств, жалоб…)
+							li
+								.step-col
+									.name Участие исполнительных действиях
+									.time от 1 р.д.
+								.description-col
+									ul
+										li непосредственное участие в ходе проведения исполнительных действий
 
 
 
