--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -2283,9 +2283,13 @@ body > .menu
 		h3
 			// font-size: 13px
 			color: #243e57
+			background: $main-color
+			color: #fff
 			font-weight: 300
 			font-size: 28px
 			text-align: left
+			display: inline-block
+			padding: 4px 10px
 			@media (max-width: $tablet)
 				font-size: 18px
 		p
@@ -2891,9 +2895,11 @@ body > .menu
 					top: 0
 					width: 28px
 
+.service-page-content .algorythm-block-1,
 .algorythm-block-1
 	counter-reset: algorythmBlock
-	li
+	padding-left: 0
+	& > li
 		list-style: none
 		padding-left: 28px
 		position: relative
@@ -2902,10 +2908,66 @@ body > .menu
 		font-size: 15px
 		font-weight: 400
 		line-height: 1.5em
+		margin-bottom: 40px
 		&:before
+			background: none
 			counter-increment: algorythmBlock
 			content: counter(algorythmBlock)
+			// position: absolute
+			display: block
+			left: 0px
+			top: 8px
+			// width: 28px
+			color: $main-color
+			font-size: 30px
+			z-index: -1
+			font-weight: bold
+		&:last-child
+			.step-col
+				&:after
+					display: none
+					content: none
+	.step-col,
+	.description-col
+		display: inline-block
+		vertical-align: top
+		width: 49%
+		@media (max-width: $mobile-large)
+			display: block
+		ul
+			@media (max-width: $mobile-large)
+				padding-left: 0
+		li
+			margin-top: 0
+		.name
+			font-size: 20px
+		.time
+			background: $main-color
+			display: inline-block
+			color: #fff
+			padding: 2px 10px
+			margin-top: 10px
+	.step-col
+		// text-align: center
+		position: relative
+		width: 30%
+		@media (max-width: $mobile-large)
+			width: 100%
+		&:after
+			content: ''
 			position: absolute
-			left: 0
-			top: 0
-			width: 28px
+			left: -20px
+			top: 40px
+			bottom: -34px
+			width: 2px
+			background: $main-color
+			@media (max-width: $mobile-large)
+				display: none
+	.description-col
+		border-left: 1px solid $main-color
+		width: 69%
+		@media (max-width: $mobile-large)
+			width: 100%
+			border: none
+			margin-top: 20px
+			margin-left: 0
